force-app/main/default/objects/cdcpc__RD_Pricing_TempTest_PriceQty__c/cdcpc__RD_Pricing_TempTest_PriceQty__c.object-meta.xml
<CustomObject>
    <label>RDPricingTempTestPriceQty</label>
    <nameField>
        <label>RDPricingTempTestPriceQty</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDPricingTempTestPriceQty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>