force-app/main/default/objects/cdcpc__RD_Pricing_TempTest_PriceQty__c/fields/cdcpc__OrderQtyUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OrderQtyUL__c</fullName>
    <label>OrderQtyUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>