force-app/main/default/objects/cdcpc__RD_Pricing_TempTest_PriceQty__c/fields/cdcpc__Temp_1__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Temp_1__c</fullName>
    <label>Temp&gt;=</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>