force-app/main/default/objects/cdcpc__RD_Pricing_TempTest_PriceQty__c/fields/cdcpc__Temp__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Temp__c</fullName>
    <label>Temp&lt;=</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>