force-app/main/default/objects/cdcpc__RD_Pricing_TempTest_PriceQty__c/fields/cdcpc__TMPTSTASME__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TMPTSTASME__c</fullName>
    <label>TMPTSTASME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>